* Add go to top;

--- a/classes.html
+++ b/classes.html
@@ -1,139 +1,303 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Classes</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Classes</title>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="./image/favicon_package_v0.16/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./image/favicon_package_v0.16/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./image/favicon_package_v0.16/favicon-16x16.png">
-  <link rel="manifest" href="./image/favicon_package_v0.16/site.webmanifest">
-  <link rel="mask-icon" href="./image/favicon_package_v0.16/safari-pinned-tab.svg" color="#95c535">
-  <meta name="msapplication-TileColor" content="#95c535">
-  <meta name="theme-color" content="#95c535">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./image/favicon_package_v0.16/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./image/favicon_package_v0.16/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./image/favicon_package_v0.16/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="./image/favicon_package_v0.16/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="./image/favicon_package_v0.16/safari-pinned-tab.svg"
+      color="#95c535"
+    />
+    <meta name="msapplication-TileColor" content="#95c535" />
+    <meta name="theme-color" content="#95c535" />
 
-  <link rel="stylesheet" href="./fonts/fonts.css" />
-  <link rel="stylesheet" href="./style/global.css" />
-  <link rel="stylesheet" href="./style/style_com.css" />
-</head>
-<body>
-  <header class="header">
-    <a class="header__logo" href="#">
-      <img src="./image/logo.svg" alt="FunLearn logo" />
-    </a>
-    </nav>
-    <input type="checkbox" name="menu" id="menu">
-    <label for="menu"><i class="font-accent icon-bar"></i></label>
-    <nav class="header__menu">
-      <ul class="header__list">
-        <li>
-          <a href="./index.html">Home</a>
-        </li>
-        <li>
-          <a href="./about.html">About us</a>
-        </li>
-        <li class="header__list-choose">
-          <a href="#">Classes</a>
-        </li>
-        <li>
-          <a href="./faq.html">FAQ</a>
-        </li>
-        <li>
-          <a href="./contacts.html">Contact</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="header__login">
-      <i class="font-accent user-circle-white" aria-hidden="true"></i>
-      <button class="btn-reset">Log in</button>
-    </div>
-  </header>
-  <main>
-    <section class="second__intro">
-      <div class="overlay"></div>
-      <div>
-        <h1>Popular Classes</h1>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./style/global.css" />
+    <link rel="stylesheet" href="./style/style_com.css" />
+    <link rel="stylesheet" href="./style/classes.css" />
+  </head>
+  <body>
+    <header class="header">
+      <a class="header__logo" href="#">
+        <!-- <img src="./image/logo.svg" alt="FunLearn logo" /> -->
+        <svg width="180" height="50" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve">
+          <desc>Created with Fabric.js 5.2.4</desc>
+          <g class="layer">
+           <title>Layer 1</title>
+           <rect fill="none" height="635" id="svg_1" width="934" x="0" y="0"/>
+           <g id="f4253ae8-bcf1-4c17-a012-e1a4f9b3a0d8" transform="matrix(0.333259 0 0 0.0814558 542 436.5)">
+            <rect fill="rgb(255,255,255)" fill-rule="nonzero" height="1080" id="svg_2" stroke-dashoffset="0" stroke-miterlimit="4" width="1080" x="-540" y="-540"/>
+           </g>
+           <g id="71db4092-794c-4085-a8f9-c41d1bd68651" transform="matrix(1 0 0 1 540 540)"/>
+           <g id="f1304746-6449-4a52-b9db-69bd14d0b10b" transform="matrix(1 0 0 1 0 0) matrix(0.919104 0 0 0.553073 599.439 285.879)">
+            <text fill="#aaaaff" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_3" stroke-dashoffset="0" stroke-miterlimit="4" x="-489.74" xml:space="preserve" y="-483.94">
+             <tspan fill="#aaaaff" id="svg_4" x="-506.18" y="-458.81">r</tspan>
+            </text>
+           </g>
+           <g id="svg_5" transform="matrix(NaN NaN NaN NaN 0 0)">
+            <g id="svg_6"/>
+           </g>
+           <g id="svg_7" transform="matrix(NaN NaN NaN NaN 0 0)">
+            <g id="svg_8"/>
+           </g>
+           <g id="svg_9" transform="matrix(1 0 0 1 0 0) matrix(0.404063 0 0 0.521356 285.812 310.739)">
+            <text fill="#ffd4aa" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_10" stroke-dashoffset="0" stroke-miterlimit="4" x="-503.3" xml:space="preserve" y="-548.6">
+             <tspan fill="#ffd4aa" id="svg_11" x="-524.5" y="-523.47">L</tspan>
+            </text>
+           </g>
+           <g id="svg_12" transform="matrix(1 0 0 1 0 0) matrix(0.973344 0 0 0.521356 560.439 282.831)">
+            <text fill="#d4ffaa" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_13" stroke-dashoffset="0" stroke-miterlimit="4" x="-465.59" xml:space="preserve" y="-498.69">
+             <tspan fill="#d4ffaa" id="svg_14" x="-484.07" y="-473.56">e</tspan>
+            </text>
+           </g>
+           <g id="svg_15" transform="matrix(1 0 0 1 0 0) matrix(0.5677 0 0 0.457537 241.765 236.585)">
+            <text fill="#ffaaaa" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_16" stroke-dashoffset="0" stroke-miterlimit="4" x="-392.66" xml:space="preserve" y="-460.83">
+             <tspan fill="#ffaaaa" id="svg_17" x="-413.9" y="-435.7">F</tspan>
+            </text>
+           </g>
+           <g id="svg_18" transform="matrix(1 0 0 1 0 0) matrix(0.551215 0 0 0.532352 259.011 285.243)">
+            <text fill="#d4aaff" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_19" stroke-dashoffset="0" stroke-miterlimit="4" x="-402.13" xml:space="preserve" y="-484.71">
+             <tspan fill="#d4aaff" id="svg_20" x="-423.97" y="-459.58">u</tspan>
+            </text>
+           </g>
+           <g id="svg_21" transform="matrix(1 0 0 1 0 0) matrix(0.569892 0 0 0.489447 510.721 276.714)">
+            <text fill="#aad4ff" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_22" stroke-dashoffset="0" stroke-miterlimit="4" x="-602.42" xml:space="preserve" y="-505.93">
+             <tspan fill="#aad4ff" id="svg_23" x="-624.9" y="-480.8">n</tspan>
+            </text>
+           </g>
+           <g id="svg_24" transform="matrix(1 0 0 1 0 0) matrix(0.761993 0 0 0.531993 518.821 289.809)">
+            <text fill="#ffaad4" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_25" stroke-dashoffset="0" stroke-miterlimit="4" x="-510.49" xml:space="preserve" y="-495.58">
+             <tspan fill="#ffaad4" id="svg_26" x="-529.81" y="-470.45">a</tspan>
+            </text>
+           </g>
+           <g id="svg_27" transform="matrix(1 0 0 1 0 0) matrix(0.763441 0 0 0.595812 395.013 298.315)">
+            <text fill="#aaaaff" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_28" stroke-dashoffset="0" stroke-miterlimit="4" x="-437.08" xml:space="preserve" y="-461.35">
+             <tspan fill="#aaaaff" id="svg_29" x="-459.56" y="-436.22">n</tspan>
+            </text>
+           </g>
+          </g>
+         </svg>
+      </a>
+      <input type="checkbox" name="menu" id="menu" />
+      <label for="menu"><i class="font-accent icon-bar"></i></label>
+      <nav class="header__menu">
+        <ul class="header__list">
+          <li>
+            <a href="./index.html">Home</a>
+          </li>
+          <li>
+            <a href="./about.html">About us</a>
+          </li>
+          <li class="header__list-choose">
+            <a href="#">Classes</a>
+          </li>
+          <li>
+            <a href="./faq.html">FAQ</a>
+          </li>
+          <li>
+            <a href="./contacts.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="header__login">
+        <i class="font-accent user-circle-white" aria-hidden="true"></i>
+        <button class="btn-reset">Log in</button>
       </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <div class="footer__logo">
-      <img src="./image/logo.svg" alt="FunLearn logo" />
-      <div class="share">
-        <div class="share-button">
-          <a href="https://www.facebook.com" target="_blank">
-            <div class="icon"><i class="font-accent fa-facebook"></i></div>
-            <span>Facebook</span>
-          </a>
+    </header>
+    <main>
+      <section class="second__intro" id="top">
+        <div class="overlay"></div>
+        <div>
+          <h1>Popular Classes</h1>
         </div>
+      </section>
 
-        <div class="share-button">
-          <a href="https://x.com" target="_blank">
-            <div class="icon"><i class="font-accent fa-twitter"></i></div>
-            <span>Twitter</span>
-          </a>
+      <section class="classes">
+        <h2>Our lessons</h2>
+        <div class="classes__cards">
+          <div class="card-class">
+            <img src="./image/start-preschool.jpg" alt="Lesson 1" />
+            <h3>Lesson 1</h3>
+            <p>Teacher: Name Surname</p>
+            <div class="price">
+              <div class="coin"></div>
+              <span>Price: 300 &euro;</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate nobis dolor reprehenderit deserunt, tempora dolorem
+              adipisci ipsa fugit est odio iusto sed numquam incidunt impedit
+              doloribus non quo, neque nostrum?
+            </p>
+          </div>
+
+          <div class="card-class">
+            <img src="./image/start-preschool.jpg" alt="Lesson 2" />
+            <h3>Lesson 2</h3>
+            <p>Teacher: Name Surname</p>
+            <div class="price">
+              <div class="coin"></div>
+              <span>Price: 300 &euro;</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+              nobis dolor reprehenderit deserunt, tempora dolorem adipisci ipsa
+              fugit est odio iusto sed numquam incidunt impedit doloribus non quo,
+              neque nostrum?
+            </p>
+          </div>
+
+          <div class="card-class">
+            <img src="./image/start-preschool.jpg" alt="Lesson 3" />
+            <h3>Lesson 3</h3>
+            <p>Teacher: Name Surname</p>
+            <div class="price">
+              <div class="coin"></div>
+              <span>Price: 300 &euro;</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+              nobis dolor reprehenderit deserunt, tempora dolorem adipisci ipsa
+              fugit est odio iusto sed numquam incidunt impedit doloribus non quo,
+              neque nostrum?
+            </p>
+          </div>
+
+          <div class="card-class">
+            <img src="./image/start-preschool.jpg" alt="Lesson 4" />
+            <h3>Lesson 4</h3>
+            <p>Teacher: Name Surname</p>
+            <div class="price">
+              <div class="coin"></div>
+              <span>Price: 300 &euro;</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+              nobis dolor reprehenderit deserunt, tempora dolorem adipisci ipsa
+              fugit est odio iusto sed numquam incidunt impedit doloribus non quo,
+              neque nostrum?
+            </p>
+          </div>
+
+          <div class="card-class">
+            <img src="./image/start-preschool.jpg" alt="Lesson 5" />
+            <h3>Lesson 5</h3>
+            <p>Teacher: Name Surname</p>
+            <div class="price">
+              <div class="coin"></div>
+              <span>Price: 300 &euro;</span>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
+              nobis dolor reprehenderit deserunt, tempora dolorem adipisci ipsa
+              fugit est odio iusto sed numquam incidunt impedit doloribus non quo,
+              neque nostrum?
+            </p>
+          </div>
         </div>
+      </section>
+      <a href="#top" class="gotopbtn"><i class="font-accent topup"></i></a>
+    </main>
+    <footer class="footer">
+      <div class="footer__logo">
+        <img src="./image/logo.svg" alt="FunLearn logo" />
+        <div class="share">
+          <div class="share-button">
+            <a href="https://www.facebook.com" target="_blank">
+              <div class="icon"><i class="font-accent fa-facebook"></i></div>
+              <span>Facebook</span>
+            </a>
+          </div>
 
-        <div class="share-button">
-          <a href="https://www.instagram.com" target="_blank">
-            <div class="icon"><i class="font-accent fa-instagram"></i></div>
-            <span>Instagram</span>
-          </a>
-        </div>
+          <div class="share-button">
+            <a href="https://x.com" target="_blank">
+              <div class="icon"><i class="font-accent fa-twitter"></i></div>
+              <span>Twitter</span>
+            </a>
+          </div>
 
-        <div class="share-button">
-          <a href="https://www.youtube.com" target="_blank">
-            <div class="icon"><i class="font-accent fa-youtube"></i></div>
-            <span>YouTube</span>
-          </a>
+          <div class="share-button">
+            <a href="https://www.instagram.com" target="_blank">
+              <div class="icon"><i class="font-accent fa-instagram"></i></div>
+              <span>Instagram</span>
+            </a>
+          </div>
+
+          <div class="share-button">
+            <a href="https://www.youtube.com" target="_blank">
+              <div class="icon"><i class="font-accent fa-youtube"></i></div>
+              <span>YouTube</span>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-    <nav class="footer__navigation">
-      <h4>Useful Links</h4>
-      <ul>
-        <li>
-          <a href="./about.html" class="text">About us</a>
-        </li>
-        <li>
-          <a href="./classes.html" class="text">Classes</a>
-        </li>
-        <li>
-          <a href="./faq.html" class="text">FAQ</a>
-        </li>
-        <li>
-          <a href="./contacts.html" class="text">Contact</a>
-        </li>
-      </ul>
-    </nav>
-    <address class="footer__address">
-      <p>Contact Info</p>
-      <ul>
-        <li>
-          <i class="font-accent fa-phone"></i>
-          <div class="text">
-            Phone<br />
-          <a href="tel:0802229522">080 222 95-22</a>
-          </div>
-        </li>
-        <li>
-          <i class="font-accent fa-email"></i>
-          <div class="text">
-            Email<br />
-            <a href="mailto:demo@example.com">demo@example.com</a>
-          </div>
-        </li>
-        <li>
-          <i class="font-accent fa-location"></i>
-          <div class="text">Address<br />Saint-Petersburg</div>
-        </li>
-      </ul>
-    </address>
-  </footer>
+      <nav class="footer__navigation">
+        <h4>Useful Links</h4>
+        <ul>
+          <li>
+            <a href="./about.html" class="text">About us</a>
+          </li>
+          <li>
+            <a href="./classes.html" class="text">Classes</a>
+          </li>
+          <li>
+            <a href="./faq.html" class="text">FAQ</a>
+          </li>
+          <li>
+            <a href="./contacts.html" class="text">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="footer__address">
+        <p>Contact Info</p>
+        <ul>
+          <li>
+            <i class="font-accent fa-phone"></i>
+            <div class="text">
+              Phone<br />
+              <a href="tel:0802229522">080 222 95-22</a>
+            </div>
+          </li>
+          <li>
+            <i class="font-accent fa-email"></i>
+            <div class="text">
+              Email<br />
+              <a href="mailto:demo@example.com">demo@example.com</a>
+            </div>
+          </li>
+          <li>
+            <i class="font-accent fa-location"></i>
+            <div class="text">Address<br />Saint-Petersburg</div>
+          </li>
+        </ul>
+      </address>
+    </footer>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="./scripts/scripts.js"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./scripts/scripts.js"></script>
+  </body>
 </html>
