--- a/about.html
+++ b/about.html
@@ -6,13 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About us</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./image/favicon_package_v0.16/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./image/favicon_package_v0.16/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./image/favicon_package_v0.16/favicon-16x16.png">
-    <link rel="manifest" href="./image/favicon_package_v0.16/site.webmanifest">
-    <link rel="mask-icon" href="./image/favicon_package_v0.16/safari-pinned-tab.svg" color="#95c535">
-    <meta name="msapplication-TileColor" content="#95c535">
-    <meta name="theme-color" content="#95c535">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./image/favicon_package_v0.16/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./image/favicon_package_v0.16/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./image/favicon_package_v0.16/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="./image/favicon_package_v0.16/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="./image/favicon_package_v0.16/safari-pinned-tab.svg"
+      color="#95c535"
+    />
+    <meta name="msapplication-TileColor" content="#95c535" />
+    <meta name="theme-color" content="#95c535" />
 
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./style/global.css" />
@@ -24,8 +45,7 @@
       <a class="header__logo" href="#">
         <img src="./image/logo.svg" alt="FunLearn logo" />
       </a>
-      </nav>
-      <input type="checkbox" name="menu" id="menu">
+      <input type="checkbox" name="menu" id="menu" />
       <label for="menu"><i class="font-accent icon-bar"></i></label>
       <nav class="header__menu">
         <ul class="header__list">
@@ -52,20 +72,19 @@
       </div>
     </header>
     <main>
-      <section class="second__intro">
+      <section class="second__intro" id="top">
         <div class="overlay"></div>
         <div>
           <h1>About Us</h1>
         </div>
       </section>
       <section class="play">
-        <iframe
-          height="400"
-          width="600"
-          src="//www.youtube.com/embed/0TrVXySLS0A?si=LqXQRX3PyAH7FQC_">
-        </iframe>
+        <div class="video-container">
+          <iframe src="//www.youtube.com/embed/0TrVXySLS0A?si=LqXQRX3PyAH7FQC_">
+          </iframe>
+        </div>
         <div>
-          <h2>Play & Learn</h2>
+          <h2>Play &amp; Learn</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
             nobis dolor reprehenderit deserunt, tempora dolorem adipisci ipsa
@@ -85,7 +104,6 @@
             neque nostrum?
           </p>
         </div>
-        
       </section>
 
       <section class="contact-us">
@@ -100,6 +118,60 @@
         </div>
       </section>
 
+      <section class="teachers">
+        <h2>Our team</h2>
+        <div class="teacher__cards">
+          <div class="card">
+            <div class="card-image">
+              <img src="./image/woman.jpg" alt="teacher 1" />
+              <div class="card-overlay">
+                <a href="https://www.instagram.com" target="_blank">
+                  <div class="icon">
+                    <i class="font-accent fa-instagram"></i>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="card-text">
+              <h3>name nurname</h3>
+              <span>teacher</span>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img src="./image/woman.jpg" alt="teacher 2" />
+              <div class="card-overlay">
+                <a href="https://www.instagram.com" target="_blank">
+                  <div class="icon">
+                    <i class="font-accent fa-instagram"></i>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="card-text">
+              <h3>name nurname</h3>
+              <span>teacher</span>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-image">
+              <img src="./image/woman.jpg" alt="teacher 3" />
+              <div class="card-overlay">
+                <a href="https://www.instagram.com" target="_blank">
+                  <div class="icon">
+                    <i class="font-accent fa-instagram"></i>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="card-text">
+              <h3>name nurname</h3>
+              <span>teacher</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <a href="#top" class="gotopbtn"><i class="font-accent topup"></i></a>
     </main>
     <footer class="footer">
       <div class="footer__logo">
@@ -158,7 +230,7 @@
             <i class="font-accent fa-phone"></i>
             <div class="text">
               Phone<br />
-            <a href="tel:0802229522">080 222 95-22</a>
+              <a href="tel:0802229522">080 222 95-22</a>
             </div>
           </li>
           <li>
