--- a/contacts.html
+++ b/contacts.html
@@ -45,8 +45,7 @@
       <a class="header__logo" href="#">
         <img src="./image/logo.svg" alt="FunLearn logo" />
       </a>
-      </nav>
-      <input type="checkbox" name="menu" id="menu">
+      <input type="checkbox" name="menu" id="menu" />
       <label for="menu"><i class="font-accent icon-bar"></i></label>
       <nav class="header__menu">
         <ul class="header__list">
@@ -73,7 +72,7 @@
       </div>
     </header>
     <main>
-      <section class="second__intro">
+      <section class="second__intro" id="top">
         <div class="overlay"></div>
         <div>
           <h1>Contact Us</h1>
@@ -82,18 +81,48 @@
       <section class="contact__question">
         <h2>Have Any Questions?</h2>
         <div class="question-form">
-          <input type="text" name="name" id="name" class="form-control" placeholder="Your Name">
-          <input type="email" name="email" id="email" class="form-control" placeholder="Your Email">
-          <input type="text" name="phone" id="phone" class="form-control" placeholder="Your Phone">
-          <input type="text" name="subject" id="subject" class="form-control" placeholder="Your Subject">
-          <textarea name="message" id="message" class="form-control" cols="20" rows="5" placeholder="Your Message"></textarea>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            class="form-control"
+            placeholder="Your Name"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="form-control"
+            placeholder="Your Email"
+          />
+          <input
+            type="text"
+            name="phone"
+            id="phone"
+            class="form-control"
+            placeholder="Your Phone"
+          />
+          <input
+            type="text"
+            name="subject"
+            id="subject"
+            class="form-control"
+            placeholder="Your Subject"
+          />
+          <textarea
+            name="message"
+            id="message"
+            class="form-control"
+            cols="20"
+            rows="5"
+            placeholder="Your Message"
+          ></textarea>
         </div>
         <div class="question-button">
           <div class="btn btn-white">
             <a href="mailto:demo@example.com">Send</a>
           </div>
         </div>
-        
       </section>
       <section class="contact-address">
         <h2>Find us</h2>
@@ -122,15 +151,13 @@
         <div class="map-container">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d511631.1368901543!2d29.435369445443566!3d59.93945747229972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696378cc74a6f9d%3A0xfa47ca5a4725c9e4!2z0KHQsNC90LrRgi3Qn9C10YLQtdGA0LHRg9GA0LMsINCg0L7RgdGB0LjRjw!5e0!3m2!1sru!2sfi!4v1718300999941!5m2!1sru!2sfi"
-            width="100%" 
-            height="500" 
-            style="border:0;"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
       </section>
+      <a href="#top" class="gotopbtn"><i class="font-accent topup"></i></a>
     </main>
     <footer class="footer">
       <div class="footer__logo">
