--- a/faq.html
+++ b/faq.html
@@ -45,8 +45,7 @@
       <a class="header__logo" href="#">
         <img src="./image/logo.svg" alt="FunLearn logo" />
       </a>
-      </nav>
-      <input type="checkbox" name="menu" id="menu">
+      <input type="checkbox" name="menu" id="menu" />
       <label for="menu"><i class="font-accent icon-bar"></i></label>
       <nav class="header__menu">
         <ul class="header__list">
@@ -73,7 +72,7 @@
       </div>
     </header>
     <main>
-      <section class="second__intro">
+      <section class="second__intro" id="top">
         <div class="overlay"></div>
         <div>
           <h1>Frequently Asked Questions</h1>
@@ -185,6 +184,7 @@
           </div>
         </div>
       </section>
+      <a href="#top" class="gotopbtn"><i class="font-accent topup"></i></a>
     </main>
     <footer class="footer">
       <div class="footer__logo">
