--- a/index.html
+++ b/index.html
@@ -6,27 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FunLearn</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./image/favicon_package_v0.16/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./image/favicon_package_v0.16/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./image/favicon_package_v0.16/favicon-16x16.png">
-    <link rel="manifest" href="./image/favicon_package_v0.16/site.webmanifest">
-    <link rel="mask-icon" href="./image/favicon_package_v0.16/safari-pinned-tab.svg" color="#95c535">
-    <meta name="msapplication-TileColor" content="#95c535">
-    <meta name="theme-color" content="#95c535">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./image/favicon_package_v0.16/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./image/favicon_package_v0.16/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./image/favicon_package_v0.16/favicon-16x16.png"
+    />
+    <link
+      rel="manifest"
+      href="./image/favicon_package_v0.16/site.webmanifest"
+    />
+    <link
+      rel="mask-icon"
+      href="./image/favicon_package_v0.16/safari-pinned-tab.svg"
+      color="#95c535"
+    />
+    <meta name="msapplication-TileColor" content="#95c535" />
+    <meta name="theme-color" content="#95c535" />
 
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./style/global.css" />
     <link rel="stylesheet" href="./style/style_com.css" />
     <link rel="stylesheet" href="./style/style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <header class="header">
       <a class="header__logo" href="#">
         <img src="./image/logo.svg" alt="FunLearn logo" />
       </a>
-      </nav>
-      <input type="checkbox" name="menu" id="menu">
+      <input type="checkbox" name="menu" id="menu" />
       <label for="menu"><i class="font-accent icon-bar"></i></label>
       <nav class="header__menu">
         <ul class="header__list">
@@ -53,7 +76,7 @@
       </div>
     </header>
     <main>
-      <section class="intro">
+      <section class="intro" id="top">
         <div class="overlay"></div>
         <div class="intro__about">
           <h2>Welcome To FunLearn Preschool!</h2>
@@ -75,7 +98,7 @@
       </section>
 
       <section class="reasons">
-        <img src="./image/Kid_coloring.jpg" alt="Girl's drawing"/>
+        <img src="./image/Kid_coloring.jpg" alt="Girl's drawing" />
         <div class="reasons__text">
           <h2>Why choose us?</h2>
           <p>
@@ -157,10 +180,10 @@
                   <div class="name">Name Surname</div>
                 </div>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse,
-                  officia praesentium excepturi ex a vitae quo alias explicabo velit
-                  modi molestiae dolorem optio cupiditate quasi voluptatibus vel.
-                  Accusantium, quas?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                  esse, officia praesentium excepturi ex a vitae quo alias
+                  explicabo velit modi molestiae dolorem optio cupiditate quasi
+                  voluptatibus vel. Accusantium, quas?
                 </p>
                 <div class="stars">
                   <i class="font-accent fa-star"></i>
@@ -176,10 +199,10 @@
                   <div class="name">Name Surname</div>
                 </div>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse,
-                  officia praesentium excepturi ex a vitae quo alias explicabo velit
-                  modi molestiae dolorem optio cupiditate quasi voluptatibus vel.
-                  Accusantium, quas?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                  esse, officia praesentium excepturi ex a vitae quo alias
+                  explicabo velit modi molestiae dolorem optio cupiditate quasi
+                  voluptatibus vel. Accusantium, quas?
                 </p>
                 <div class="stars">
                   <i class="font-accent fa-star"></i>
@@ -191,14 +214,14 @@
               </div>
               <div class="swiper-slide testimonials-item">
                 <div class="info">
-                  <img src="./image/woman.jpg" alt="review 3"/>
+                  <img src="./image/woman.jpg" alt="review 3" />
                   <div class="name">Name Surname</div>
                 </div>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse,
-                  officia praesentium excepturi ex a vitae quo alias explicabo velit
-                  modi molestiae dolorem optio cupiditate quasi voluptatibus vel.
-                  Accusantium, quas?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                  esse, officia praesentium excepturi ex a vitae quo alias
+                  explicabo velit modi molestiae dolorem optio cupiditate quasi
+                  voluptatibus vel. Accusantium, quas?
                 </p>
                 <div class="stars">
                   <i class="font-accent fa-star"></i>
@@ -214,10 +237,10 @@
                   <div class="name">Name Surname</div>
                 </div>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse,
-                  officia praesentium excepturi ex a vitae quo alias explicabo velit
-                  modi molestiae dolorem optio cupiditate quasi voluptatibus vel.
-                  Accusantium, quas?
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                  esse, officia praesentium excepturi ex a vitae quo alias
+                  explicabo velit modi molestiae dolorem optio cupiditate quasi
+                  voluptatibus vel. Accusantium, quas?
                 </p>
                 <div class="stars">
                   <i class="font-accent fa-star"></i>
@@ -227,12 +250,11 @@
                   <i class="font-accent fa-star-o"></i>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
       </section>
-
+      <a href="#top" class="gotopbtn"><i class="font-accent topup"></i></a>
     </main>
     <footer class="footer">
       <div class="footer__logo">
@@ -291,7 +313,7 @@
             <i class="font-accent fa-phone"></i>
             <div class="text">
               Phone<br />
-            <a href="tel:0802229522">080 222 95-22</a>
+              <a href="tel:0802229522">080 222 95-22</a>
             </div>
           </li>
           <li>
