--- a/classes.html
+++ b/classes.html
@@ -43,64 +43,7 @@
   <body>
     <header class="header">
       <a class="header__logo" href="#">
-        <!-- <img src="./image/logo.svg" alt="FunLearn logo" /> -->
-        <svg width="180" height="50" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" version="1.1" xml:space="preserve">
-          <desc>Created with Fabric.js 5.2.4</desc>
-          <g class="layer">
-           <title>Layer 1</title>
-           <rect fill="none" height="635" id="svg_1" width="934" x="0" y="0"/>
-           <g id="f4253ae8-bcf1-4c17-a012-e1a4f9b3a0d8" transform="matrix(0.333259 0 0 0.0814558 542 436.5)">
-            <rect fill="rgb(255,255,255)" fill-rule="nonzero" height="1080" id="svg_2" stroke-dashoffset="0" stroke-miterlimit="4" width="1080" x="-540" y="-540"/>
-           </g>
-           <g id="71db4092-794c-4085-a8f9-c41d1bd68651" transform="matrix(1 0 0 1 540 540)"/>
-           <g id="f1304746-6449-4a52-b9db-69bd14d0b10b" transform="matrix(1 0 0 1 0 0) matrix(0.919104 0 0 0.553073 599.439 285.879)">
-            <text fill="#aaaaff" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_3" stroke-dashoffset="0" stroke-miterlimit="4" x="-489.74" xml:space="preserve" y="-483.94">
-             <tspan fill="#aaaaff" id="svg_4" x="-506.18" y="-458.81">r</tspan>
-            </text>
-           </g>
-           <g id="svg_5" transform="matrix(NaN NaN NaN NaN 0 0)">
-            <g id="svg_6"/>
-           </g>
-           <g id="svg_7" transform="matrix(NaN NaN NaN NaN 0 0)">
-            <g id="svg_8"/>
-           </g>
-           <g id="svg_9" transform="matrix(1 0 0 1 0 0) matrix(0.404063 0 0 0.521356 285.812 310.739)">
-            <text fill="#ffd4aa" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_10" stroke-dashoffset="0" stroke-miterlimit="4" x="-503.3" xml:space="preserve" y="-548.6">
-             <tspan fill="#ffd4aa" id="svg_11" x="-524.5" y="-523.47">L</tspan>
-            </text>
-           </g>
-           <g id="svg_12" transform="matrix(1 0 0 1 0 0) matrix(0.973344 0 0 0.521356 560.439 282.831)">
-            <text fill="#d4ffaa" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_13" stroke-dashoffset="0" stroke-miterlimit="4" x="-465.59" xml:space="preserve" y="-498.69">
-             <tspan fill="#d4ffaa" id="svg_14" x="-484.07" y="-473.56">e</tspan>
-            </text>
-           </g>
-           <g id="svg_15" transform="matrix(1 0 0 1 0 0) matrix(0.5677 0 0 0.457537 241.765 236.585)">
-            <text fill="#ffaaaa" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_16" stroke-dashoffset="0" stroke-miterlimit="4" x="-392.66" xml:space="preserve" y="-460.83">
-             <tspan fill="#ffaaaa" id="svg_17" x="-413.9" y="-435.7">F</tspan>
-            </text>
-           </g>
-           <g id="svg_18" transform="matrix(1 0 0 1 0 0) matrix(0.551215 0 0 0.532352 259.011 285.243)">
-            <text fill="#d4aaff" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_19" stroke-dashoffset="0" stroke-miterlimit="4" x="-402.13" xml:space="preserve" y="-484.71">
-             <tspan fill="#d4aaff" id="svg_20" x="-423.97" y="-459.58">u</tspan>
-            </text>
-           </g>
-           <g id="svg_21" transform="matrix(1 0 0 1 0 0) matrix(0.569892 0 0 0.489447 510.721 276.714)">
-            <text fill="#aad4ff" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_22" stroke-dashoffset="0" stroke-miterlimit="4" x="-602.42" xml:space="preserve" y="-505.93">
-             <tspan fill="#aad4ff" id="svg_23" x="-624.9" y="-480.8">n</tspan>
-            </text>
-           </g>
-           <g id="svg_24" transform="matrix(1 0 0 1 0 0) matrix(0.761993 0 0 0.531993 518.821 289.809)">
-            <text fill="#ffaad4" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_25" stroke-dashoffset="0" stroke-miterlimit="4" x="-510.49" xml:space="preserve" y="-495.58">
-             <tspan fill="#ffaad4" id="svg_26" x="-529.81" y="-470.45">a</tspan>
-            </text>
-           </g>
-           <g id="svg_27" transform="matrix(1 0 0 1 0 0) matrix(0.763441 0 0 0.595812 395.013 298.315)">
-            <text fill="#aaaaff" fill-rule="nonzero" font-family="Alegreya" font-size="80" font-style="normal" font-weight="700" id="svg_28" stroke-dashoffset="0" stroke-miterlimit="4" x="-437.08" xml:space="preserve" y="-461.35">
-             <tspan fill="#aaaaff" id="svg_29" x="-459.56" y="-436.22">n</tspan>
-            </text>
-           </g>
-          </g>
-         </svg>
+        <img src="./image/logo.svg" alt="FunLearn logo" />
       </a>
       <input type="checkbox" name="menu" id="menu" />
       <label for="menu"><i class="font-accent icon-bar"></i></label>
